--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "@types/classnames": "^2.2.11",
     "@umijs/preset-react": "1.x",
     "antd": "^4.13.1",
+    "classnames": "^2.2.6",
     "umi": "^3.4.2"
   },
   "devDependencies": {
