--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "private": true,
   "scripts": {
-    "start": "umi dev",
-    "build": "umi build",
-    "postinstall": "umi generate tmp",
+    "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider umi dev",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider umi build",
+    "postinstall": "umi  generate tmp",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
     "test": "umi-test",
     "test:coverage": "umi-test --coverage",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "homepage": "http://guangliangliang.gitee.io/resume",
   "gitHooks": {
@@ -34,6 +34,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@umijs/test": "^3.4.2",
+    "cross-env": "^10.1.0",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "react": "17.x",
